updated logout styling and dark mode fix

--- a/code_radio/css/radio.css
+++ b/code_radio/css/radio.css
@@ -8,6 +8,11 @@ body {
 	--bkg-color: #fff;
 }
 
+a {
+	text-decoration: none;
+	color: #818181;
+}
+
 body.dark-theme {
 	--text-color: #eee;
 	--bkg-color: #35383d;
